--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .title {
-  color: #333;
+  color: rgb(68, 143, 143);
   padding-bottom: 20px;
   text-align: center;
 }
@@ -14,7 +14,7 @@
   letter-spacing: .1rem;
   padding: 8px 0;
   margin: 20px auto;
-  background: #76977e;
+  background: rgb(99, 185, 185);;
   border-radius: 4px;
   color: white;
   text-align: center;
