--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,10 +23,22 @@ nav {
 }
 nav a {
   margin-left: 12px;
+  color: rgb(68, 143, 143);
+  font-size: 1.3rem;
+  padding: 8px 10px;
+  font-weight: bolder;
+
 }
+nav a:hover {
+background-color: rgb(99, 173, 173);
+color: #fff;
+}
+
 nav .logo {
   margin-right: auto;
 }
+
+
 footer {
   display: block;
   text-align: center;
