--- a/styles/Books.module.css
+++ b/styles/Books.module.css
@@ -1,3 +1,12 @@
-.txt {
-color: blue
+.single {
+  padding: 2px 16px;
+  background: rgb(108, 195, 195);
+  display: block;
+  margin: 20px 10px;
+  border-left: 8px solid #fff;
+
+}
+
+.single:hover {
+  border-left: 8px solid rgb(21, 49, 105);;
 }
