--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,14 @@
+.container {
+  display: flex;
+  grid-template-columns: auto auto;
+  justify-content: space-between;
+}
+
 .title {
-  color: rgb(68, 143, 143);
-  padding-bottom: 20px;
+  color: rgb(49, 79, 79);
+  padding-bottom: 10px;
   text-align: center;
+  font-size: large;
 }
 
 .text {
@@ -11,11 +18,17 @@
 .btn {
   display: block;
   width: 250px;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   padding: 8px 0;
   margin: 20px auto;
-  background: rgb(99, 185, 185);;
+  background: rgb(99, 185, 185);
   border-radius: 4px;
   color: white;
   text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    flex-direction: column-reverse;
+  }
 }
